Add reservation creation functionality