@@ -1,8 +1,6 @@
 package FlyAway.reservation;
 
-import FlyAway.exception.FlightDoesNotExistException;
-import FlyAway.exception.ReservationDoesNotExistException;
-import FlyAway.exception.UserDoesNotExistException;
+import FlyAway.exception.*;
 import FlyAway.flight.Flight;
 import FlyAway.flight.FlightRepository;
 import FlyAway.reservation.dto.CreateReservationDto;
@@ -10,9 +8,11 @@ import FlyAway.reservation.dto.DisplayReservationDto;
 import FlyAway.reservation.dto.ReservationDto;
 import FlyAway.client.Client;
 import FlyAway.client.ClientRepository;
+import FlyAway.security.SecurityUser;
 import org.mapstruct.factory.Mappers;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
@@ -25,14 +25,14 @@ import java.util.stream.Collectors;
 public class ReservationService {
 
     private final ReservationRepository reservationRepository;
-    private final ClientRepository userRepository;
+    private final ClientRepository clientRepository;
     private final FlightRepository flightRepository;
     private final ReservationMapper reservationMapper = Mappers.getMapper(ReservationMapper.class);
     private static final Logger LOGGER = LoggerFactory.getLogger(ReservationService.class);
 
     public ReservationService(ReservationRepository reservationRepository, ClientRepository userRepository, FlightRepository flightRepository) {
         this.reservationRepository = reservationRepository;
-        this.userRepository = userRepository;
+        this.clientRepository = userRepository;
         this.flightRepository = flightRepository;
     }
 
@@ -40,61 +40,48 @@ public class ReservationService {
         LOGGER.debug("Retrieving all reservations from repository");
         List<DisplayReservationDto> reservations = reservationRepository.findAll()
                 .stream().map(reservationMapper::reservationToDisplayReservationDto)
-                .collect(Collectors.toList());
+                .toList();
         LOGGER.info("Retrieved {} reservations", reservations.size());
         return reservations;
     }
 
-    public ReservationDto addReservation(CreateReservationDto createReservationDto) {
-        LOGGER.debug("Adding new reservation");
-        Optional<Client> optionalUser = userRepository.findActiveById(createReservationDto.clientId());
-        if (optionalUser.isPresent()) {
-            Client client = optionalUser.get();
-            Optional<Flight> optionalFlight = flightRepository.findById(createReservationDto.flightId());
-            if (optionalFlight.isPresent()) {
-                Flight flight = optionalFlight.get();
-                Reservation createdReservation = new Reservation();
-                createdReservation.setPrice(createReservationDto.price());
-                createdReservation.setSeatNumber(createReservationDto.seatNumber());
-                createdReservation.setReservationDate(LocalDateTime.now());
-                createdReservation.setClient(client);
-                createdReservation.setFlight(flight);
+    public ReservationDto createReservation(CreateReservationDto createReservationDto, Authentication authentication) {
+        LOGGER.debug("Creating new reservation");
+        var securityUser = (SecurityUser) authentication.getPrincipal();
+        Client client = (Client) securityUser.getUser();
+        Flight flight = flightRepository.findById(createReservationDto.flightId())
+                .orElseThrow(FlightDoesNotExistException::new);
 
-                List<Reservation> userReservations = client.getReservations();
-                userReservations.add(createdReservation);
-                client.setReservations(userReservations);
-
-                List<Reservation> flightReservations = flight.getReservations();
-                flightReservations.add(createdReservation);
-                flight.setReservations(flightReservations);
-
-                reservationRepository.save(createdReservation);
-                LOGGER.info("Created reservation with id {}", createdReservation.getId());
-
-                ReservationDto reservationDTO = reservationMapper.reservationToReservationDto(createdReservation);
-                LOGGER.debug("Mapped to ReservationDto");
-                return reservationDTO;
-            } else {
-                LOGGER.error("Flight with id {} does not exist", createReservationDto.flightId());
-                throw new FlightDoesNotExistException("Flight with id: " + createReservationDto.flightId() + " does not exist");
-            }
-        } else {
-            LOGGER.error("User with id {} does not exist", createReservationDto.clientId());
-            throw new UserDoesNotExistException("User with id: " + createReservationDto.clientId() + " does not exist");
+        if (!flight.getCabinClassPrices().keySet().contains(createReservationDto.cabinClass())) {
+            throw new CabinClassDoesNotExistException(createReservationDto.cabinClass());
         }
 
+        Reservation reservation = Reservation.builder()
+                .reservationDate(LocalDateTime.now())
+                .price(flight.getCabinClassPrices().get(createReservationDto.cabinClass()))
+                .seatNumber(createReservationDto.seatNumber())
+                .cabinClass(createReservationDto.cabinClass())
+                .client(client)
+                .flight(flight)
+                .build();
+        reservationRepository.save(reservation);
+        LOGGER.info("Created new reservation for client {} and flight {}",
+                client.getId(),
+                createReservationDto.flightId()
+        );
+        return reservationMapper.reservationToReservationDto(reservation);
     }
 
     public ReservationDto getReservation(UUID id) {
-        LOGGER.debug("Retrieving reservation with id {}",id);
+        LOGGER.debug("Retrieving reservation with id {}", id);
         Optional<Reservation> optionalReservation = reservationRepository.findById(id);
         return optionalReservation.map(
                 r -> {
-                    LOGGER.info("Successfully retrieved reservation with id {}",id);
+                    LOGGER.info("Successfully retrieved reservation with id {}", id);
                     return reservationMapper.reservationToReservationDto(r);
                 }
         ).orElseThrow(() -> {
-            LOGGER.error("Reservation with id {} does not exist",id);
+            LOGGER.error("Reservation with id {} does not exist", id);
             throw new ReservationDoesNotExistException(id);
         });
     }
@@ -106,7 +93,7 @@ public class ReservationService {
             Reservation reservation = optionalReservation.get();
             reservation.setCancelled(true);
             reservationRepository.save(reservation);
-            LOGGER.info("Successfully cancelled reservation with id {}",id);
+            LOGGER.info("Successfully cancelled reservation with id {}", id);
         } else {
             LOGGER.error("Reservation with id {} does not exist", id);
             throw new ReservationDoesNotExistException(id);
